Split data markdown

--- a/Báo Cáo Cuối Kỳ/Bài làm của Tạ Quang Khôi.ipynb
+++ b/Báo Cáo Cuối Kỳ/Bài làm của Tạ Quang Khôi.ipynb
@@ -409,6 +409,16 @@
     "\n",
     "df_final.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Split data"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "93d7b66129b6261"
   }
  ],
  "metadata": {
