--- a/Báo Cáo Cuối Kỳ/Bài làm của Tạ Quang Khôi.ipynb
+++ b/Báo Cáo Cuối Kỳ/Bài làm của Tạ Quang Khôi.ipynb
@@ -601,6 +601,16 @@
    "id": "bd6b2d72849c2e99"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Logistic Regression"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b0c396ddfd5e338c"
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "outputs": [
@@ -635,6 +645,52 @@
     }
    },
    "id": "e20ad593fc60ad50"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Decision Tree"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "32fe5592ee2e20ae"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.64      0.64      0.64      1111\n",
+      "           1       0.72      0.72      0.72      1426\n",
+      "\n",
+      "    accuracy                           0.69      2537\n",
+      "   macro avg       0.68      0.68      0.68      2537\n",
+      "weighted avg       0.69      0.69      0.69      2537\n"
+     ]
+    }
+   ],
+   "source": [
+    "DTC = DecisionTreeClassifier().fit(X_train, y_train)\n",
+    "\n",
+    "#Predict the response for test dataset\n",
+    "y_pred_DTC = DTC.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred_DTC))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-16T04:33:14.960132500Z",
+     "start_time": "2023-08-16T04:33:14.792599Z"
+    }
+   },
+   "id": "ddbc525cc7d888a0"
   }
  ],
  "metadata": {
