--- a/Báo Cáo Cuối Kỳ/Bài làm của Tạ Quang Khôi.ipynb
+++ b/Báo Cáo Cuối Kỳ/Bài làm của Tạ Quang Khôi.ipynb
@@ -691,6 +691,129 @@
     }
    },
    "id": "ddbc525cc7d888a0"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## K-Nearest Neighbors"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9bc463843915db3f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.63      0.58      0.60      1111\n",
+      "           1       0.69      0.73      0.71      1426\n",
+      "\n",
+      "    accuracy                           0.66      2537\n",
+      "   macro avg       0.66      0.65      0.66      2537\n",
+      "weighted avg       0.66      0.66      0.66      2537\n"
+     ]
+    }
+   ],
+   "source": [
+    "KNN = KNeighborsClassifier().fit(X_train, y_train)\n",
+    "\n",
+    "#Predict the response for test dataset\n",
+    "y_pred_KNN = KNN.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred_KNN))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-16T04:35:40.964225Z",
+     "start_time": "2023-08-16T04:35:39.570249800Z"
+    }
+   },
+   "id": "19ec312f8ec0879e"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Gaussian Naive Bayes"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d6b895bc8af92959"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.57      0.63      0.60      1111\n",
+      "           1       0.68      0.62      0.65      1426\n",
+      "\n",
+      "    accuracy                           0.63      2537\n",
+      "   macro avg       0.62      0.63      0.62      2537\n",
+      "weighted avg       0.63      0.63      0.63      2537\n"
+     ]
+    }
+   ],
+   "source": [
+    "GNB = GaussianNB().fit(X_train, y_train)\n",
+    "\n",
+    "#Predict the response for test dataset\n",
+    "y_pred_GNB = GNB.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred_GNB))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-16T04:36:04.409347Z",
+     "start_time": "2023-08-16T04:36:04.316619500Z"
+    }
+   },
+   "id": "1c5db3aafe364394"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Support Vector Machine"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "26bd0aec0b6cd7e1"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "SVM = SVC(kernel=\"rbf\", random_state=None, probability=True, cache_size=500, gamma=0.1).fit(X_train, y_train)\n",
+    "\n",
+    "#Predict the response for test dataset\n",
+    "y_pred_SVM = SVM.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred_SVM))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2023-08-16T04:36:29.780527100Z"
+    }
+   },
+   "id": "2d41ab76717db4b8"
   }
  ],
  "metadata": {
