Remove unused import

--- a/Báo Cáo Cuối Kỳ/Bài làm của Tạ Quang Khôi.ipynb
+++ b/Báo Cáo Cuối Kỳ/Bài làm của Tạ Quang Khôi.ipynb
@@ -24,7 +24,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
    ]
@@ -430,7 +429,7 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
     "enc = OneHotEncoder(dtype='int64')\n",
     "\n",
@@ -580,14 +579,11 @@
    "execution_count": 56,
    "outputs": [],
    "source": [
-    "import sklearn as sk\n",
-    "from sklearn import metrics\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.svm import SVC"
    ],
@@ -796,8 +792,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 67,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.76      0.64      0.70      1111\n",
+      "           1       0.75      0.85      0.80      1426\n",
+      "\n",
+      "    accuracy                           0.76      2537\n",
+      "   macro avg       0.76      0.74      0.75      2537\n",
+      "weighted avg       0.76      0.76      0.75      2537\n"
+     ]
+    }
+   ],
    "source": [
     "SVM = SVC(kernel=\"rbf\", random_state=None, probability=True, cache_size=500, gamma=0.1).fit(X_train, y_train)\n",
     "\n",
@@ -808,8 +819,8 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2023-08-16T04:38:13.041873300Z",
      "start_time": "2023-08-16T04:36:29.780527100Z"
     }
    },
