--- a/Báo Cáo Cuối Kỳ/Bài làm của Tạ Quang Khôi.ipynb
+++ b/Báo Cáo Cuối Kỳ/Bài làm của Tạ Quang Khôi.ipynb
@@ -778,6 +778,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "SVM = SVC(kernel=\"rbf\", random_state=None, probability=True, cache_size=500, gamma=0.1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e277621dbab7bae1"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "SVM.fit(X_train, y_train)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "da1a2eea6951d443"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Predict the response for test dataset\n",
+    "y_pred_SVM = SVM.predict(X_test)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "81d28d80c26c4c98"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 67,
    "outputs": [
     {
@@ -796,11 +833,6 @@
     }
    ],
    "source": [
-    "SVM = SVC(kernel=\"rbf\", random_state=None, probability=True, cache_size=500, gamma=0.1).fit(X_train, y_train)\n",
-    "\n",
-    "#Predict the response for test dataset\n",
-    "y_pred_SVM = SVM.predict(X_test)\n",
-    "\n",
     "print(classification_report(y_test, y_pred_SVM))"
    ],
    "metadata": {
